added "chat" log

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,16 +1,9 @@
-/Animation.class
-/Body.class
+/MessageHandle$DebugRectangle.class
+/MessageHandle$Figure.class
+/MessageHandle$JFrameTesting.class
 /DebugRectangle.class
 /Figure$1.class
 /Figure.class
 /JFrameTesting.class
-/Message.class
-/MyFileTransferHandler.class
-/Vector2.class
-/MessageHandle.class
-/MessageItem.class
 /MessageHandle$1.class
 /MessageHandle$2.class
-/LoliStomach.class
-/Stomach.class
-/FairyStomach.class
