clean up junk code

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,14 @@
+/Animation.class
+/Body.class
 /DebugRectangle.class
+/FairyStomach.class
 /Figure$1.class
 /Figure.class
 /JFrameTesting.class
+/MessageBox.class
 /MessageHandle$1.class
 /MessageHandle$2.class
 /MessageHandle.class
+/Vector2.class
 /Vocabulary.class
+/json-simple-1.1.1.jar
